# example-qtframeless

./: CMakeLists.txt  resource.rc
android/src/ca/calm/framelessdemo/: framelessdemo.java
src/: dialog1.cpp  dialog1.h  main.cpp  maintitlebarbutton.cpp  maintitlebarbutton.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
